// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor component test component loads for editing 1`] = `
<LegayEditor
  classes={
    Object {
      "container": "LegayEditor-container-3",
      "editorContainer": "LegayEditor-editorContainer-5",
      "emojiSelect": "LegayEditor-emojiSelect-6",
      "footerSubsection": "LegayEditor-footerSubsection-2",
      "paper": "LegayEditor-paper-1",
      "readContainer": "LegayEditor-readContainer-4",
    }
  }
  editorState={Object {}}
  onBlur={[Function]}
  onFocus={[Function]}
  readOnly={false}
  setEditorState={[Function]}
  text="test"
/>
`;

exports[`Editor component test component loads read only 1`] = `
<LegayEditor
  classes={
    Object {
      "container": "LegayEditor-container-3",
      "editorContainer": "LegayEditor-editorContainer-5",
      "emojiSelect": "LegayEditor-emojiSelect-6",
      "footerSubsection": "LegayEditor-footerSubsection-2",
      "paper": "LegayEditor-paper-1",
      "readContainer": "LegayEditor-readContainer-4",
    }
  }
  readOnly={true}
  text="test 123"
/>
`;
